--- a/js-task6/Page2.html
+++ b/js-task6/Page2.html
@@ -1,53 +1,130 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <script src="http://how2j.cn/study/js/jquery/2.0.0/jquery.min.js"></script>
-    <link href="http://how2j.cn/study/css/bootstrap/3.3.6/bootstrap.min.css" rel="stylesheet">
-    <script src="http://how2j.cn/study/js/bootstrap/3.3.6/bootstrap.min.js"></script>
-    <!--<script src="js/angular.js"></script>-->
-    <script src="https://cdn.static.runoob.com/libs/angular.js/1.4.6/angular.min.js"></script>
-    <script src="js/form.js"></script>
-    <title>表单</title>
-</head>
-<body>
-<div ng-app="myApp" ng-controller="formCtrl">
-<table class="table table-striped table-bordered table-hover  table-condensed">
-    <thead>
-    <th>id</th>
-    <th>name</th>
-    <th>qq</th>
-    <th>type</th>
-    <th>school</th>
-    <th>talent</th>
-    <th>level</th>
-    <th>joinTime</th>
-    <th>wish</th>
-    <th>updateAt</th>
-    <th>createAt</th>
-    </thead>
 
-    <tbody>
-    <tr ng-repeat="x in names">
 
-        <td> {{x.id}}</td>
-        <td> {{x.name}}</td>
-        <td> {{x.qq}}</td>
-        <td> {{x.type}}</td>
-        <td> {{x.school}}</td>
-        <td> {{x.talent}}</td>
-        <td> {{x.level}}</td>
-        <td> {{x.joinTime}}</td>
-        <td> {{x.wish}}</td>
-        <td> {{x.updateAt}}</td>
-        <td> {{x.createAt}}</td>
 
-    </tr>
-    </tbody>
-</table>
 
+
+
+
+
+
+<link rel="stylesheet" href="css/page2.css">
+
+<!--<script src="js/angular.js"></script>-->
+
+<!--<script src="js/form.js"></script>-->
+
+
+<div class="main2 bg-color-white bba color-grey4 of-auto" >
+    <div class="bg-color-lightgrey bb">
+        <span class="head">本日订单</span>
+    </div>
+    <div class="ma18">
+        <div class="mb18 bg-color-grey3 of-auto bba2 pt30">
+            <div class="ml33 mb18 pull-left">
+                <span class="mr18">客户姓名</span>
+                <input type="text">
+            </div>
+            <div class="ml33 mb18 pull-left">
+                <span class="mr18">客户姓名</span>
+                <input type="text">
+            </div>
+            <div class="ml33 mb18 pull-left">
+                <span class="mr18">客户姓名</span>
+                <input type="text">
+            </div>
+            <div class="ml33 mb18 pull-left">
+                <span class="mr18">客户姓名</span>
+                <input type="text">
+            </div>
+            <div class="ml33 mb18 pull-left">
+                <span class="mr18">客户姓名</span>
+                <input type="text">
+            </div>
+
+            <div class="ml33 mb18 pull-left">
+                <span class="mr18">客户姓名</span>
+                <input type="text">
+            </div>
+            <!--<br>-->
+            <button type="button" class="btn btn-info pull-right btn4 mb30 mr33 ml200">
+                <span class="glyphicon glyphicon-search"></span>搜索</button>
+        </div>
+        <div  ng-controller="myCtrl1">
+            <table class="table table-striped table-bordered table-hover table-condensed ">
+                <thead>
+                <th>id</th>
+                <th>name</th>
+                <th>qq</th>
+                <th>type</th>
+                <th>school</th>
+                <th>talent</th>
+                <th>level</th>
+                <th>操作</th>
+                <!--<th>joinTime</th>-->
+                <!--<th>wish</th>-->
+                <!--<th>updateAt</th>-->
+                <!--<th>createAt</th>-->
+                </thead>
+
+                <tbody>
+                <tr ng-repeat="x in names">
+
+                    <td> {{x.id}}</td>
+                    <td> {{x.name}}</td>
+                    <td> {{x.qq}}</td>
+                    <td> {{x.type}}</td>
+                    <td> {{x.school}}</td>
+                    <td> {{x.talent}}</td>
+                    <td> {{x.level}}</td>
+                    <td>
+                        <button type="button" class="btn btn-success">查看</button>
+                        <button type="button" class="btn btn-warning">关闭</button>
+                    </td>
+                    <!--<td> {{x.joinTime}}</td>-->
+                    <!--<td> {{x.wish}}</td>-->
+                    <!--<td> {{x.updateAt}}</td>-->
+                    <!--<td> {{x.createAt}}</td>-->
+
+                </tr>
+                </tbody>
+            </table>
+
+        </div>
+    </div>
+    <nav class="pull-right mr18">
+        <ul class="pagination">
+            <li>
+                <a href="#" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                </a>
+            </li>
+            <li><a href="">1</a></li>
+            <li><a href="">2</a></li>
+            <li><a href="">3</a></li>
+            <li><a href="">4</a></li>
+            <li><a href="">5</a></li>
+            <li>
+                <a href="#" aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
 </div>
-</body>
 
-</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--<script src="js/form.js"></script>-->
+
+
