--- a/js-task6/main.html
+++ b/js-task6/main.html
@@ -1,17 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title></title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+
+    <script src="js/jquery-2.0.js"></script>
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <script src="js/bootstrap.js"></script>
     <!--<script src="js/jquery-3.1.1.js"></script>-->
-    <script src="http://how2j.cn/study/js/jquery/2.0.0/jquery.min.js"></script>
-    <script src="https://cdn.static.runoob.com/libs/angular.js/1.4.6/angular.min.js"></script>
-    <!--<script src="js/angular.js"></script>-->
+    <!--<script src="https://cdn.static.runoob.com/libs/angular.js/1.4.6/angular.min.js"></script>-->
+    <script src="js/angular.js"></script>
     <script src="js/angular-ui-router.js"></script>
+
+
+    <link rel="stylesheet" href="css/js-task5.css">
     <script src="js/app.js"></script>
+
+
+    <!--<script src="js/page-tab.js"></script>-->
 </head>
 <body data-ng-app="myApp">
 
-<div data-ui-view=""></div>
+<div style="min-width: 1271px" data-ui-view=""></div>
+
+
+
+
 </body>
+
+
 <html>
 
