--- a/js-task6/page-tab.html
+++ b/js-task6/page-tab.html
@@ -1,27 +1,41 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--<head>-->
+    <!--<meta charset="UTF-8">-->
+    <!--<meta name="viewport" content="width=device-width,initial-scale=1">-->
 
-    <script src="http://how2j.cn/study/js/jquery/2.0.0/jquery.min.js"></script>
-    <link href="http://how2j.cn/study/css/bootstrap/3.3.6/bootstrap.min.css" rel="stylesheet">
-    <script src="http://how2j.cn/study/js/bootstrap/3.3.6/bootstrap.min.js"></script>
-    <link href="css/page-tab.css" rel="stylesheet">
-    <!--<script src="js/angular.js"></script>-->
-    <script src="https://cdn.static.runoob.com/libs/angular.js/1.4.6/angular.min.js"></script>
-    <!--<script src="js/form.js"></script>-->
-    <!--<title>表单</title>-->
-</head>
+    <!--<style>-->
+        <!--.panel-line {-->
+            <!--transition: all linear 0.5s;-->
+        <!--}-->
 
+        <!--.ng-hide {-->
+            <!--height: 0;-->
+            <!--width: 0;-->
+            <!--background-color: transparent;-->
+        <!--}-->
+
+    <!--</style>-->
+
+
+    <!--<script src="http://how2j.cn/study/js/jquery/2.0.0/jquery.min.js"></script>-->
+    <!--<link href="http://how2j.cn/study/css/bootstrap/3.3.6/bootstrap.min.css" rel="stylesheet">-->
+    <!--<script src="http://how2j.cn/study/js/bootstrap/3.3.6/bootstrap.min.js"></script>-->
+
+<link href="css/page-tab.css" rel="stylesheet">
+
+<!--</head>-->
+
+<!--<body>-->
 
 <div class="panel-group  list-group nav-left " id="accordion" role="tablist" aria-multiselectable="true">
+
 <img class="nav-icon" src="images/logo.png" >
 
-    <div class="list-group-item panel panel-default ">
+    <div class=" panel panel-default ">
 
-        <div class="  panel-heading" role="tab" id="headingOne">
-            <span class="panel-line"></span>
+        <div ng-app="showApp" class="panel-heading" role="tab" id="headingOne">
+            <span  class="panel-line"></span>
             <h4 class="panel-title">
                 <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                     <img class="nav-icon2" src="images/icon1.png" style="padding: 0 3px">欢迎页<img class="nav-icon3" src="images/arrows.png" >
@@ -30,17 +44,17 @@
         </div>
         <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
             <div class=" list-group">
-                    <a href="#" class="list-group-item ">
-                        <span class="nav-p">欢迎页</span>
-                    </a>
-                    <a href="#" class="list-group-item"><span class="nav-p">订单动态</span></a>
-                    <a href="#" class="list-group-item"><span class="nav-p">今日报表</span></a>
+                    <a href="" class="list-group-item " ui-sref=".Page1"><span class="nav-p">欢迎页</span></a>
+                    <a href="" class="list-group-item" ui-sref=".Page2"><span class="nav-p">订单动态</span></a>
+                    <a href="" class="list-group-item" ui-sref=".Page3"><span class="nav-p">今日报表</span></a>
+                    <a href="" class="list-group-item" ui-sref=".Page4"><span class="nav-p">表单汇总</span></a>
             </div>
         </div>
     </div>
 
-    <div class="list-group-item panel panel-default ">
+    <div class=" panel panel-default ">
         <div class="  panel-heading" role="tab" id="headingTwo">
+            <span class="panel-line"></span>
             <h4 class="panel-title">
                 <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                     <img class="nav-icon2" src="images/icon2.png">水站管理<img class="nav-icon3" src="images/arrows.png" >
@@ -67,8 +81,9 @@
         </div>
     </div>
 
-    <div class="list-group-item panel panel-default ">
+    <div class=" panel panel-default ">
         <div class="  panel-heading" role="tab" id="headingThree">
+            <span class="panel-line"></span>
             <h4 class="panel-title">
                 <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                     <img class="nav-icon2" src="images/icon3.png">客户管理<img class="nav-icon3" src="images/arrows.png" >
@@ -96,95 +111,53 @@
     </div>
 
 
-    <!--<div class="panel panel-default list-group-item">-->
-        <!--<div class="panel-heading" role="tab" id="headingSix">-->
-            <!--<h4 class="panel-title">-->
-                <!--<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseSix">-->
-                    <!--风暴英雄-->
-                <!--</a>-->
-            <!--</h4>-->
-        <!--</div>-->
-        <!--<div id="collapseSix" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">-->
-            <!--<div class=" list-group">-->
-                <!--<a href="#" class="list-group-item active">-->
-                    <!--回锅肉-->
-                <!--</a>-->
-                <!--<a href="#" class="list-group-item">烧烤</a>-->
-                <!--<a href="#" class="list-group-item">鱼香肉丝</a>-->
-                <!--<a href="#" class="list-group-item">麻婆豆腐</a>-->
-                <!--<a href="#" class="list-group-item">夫妻肺片</a>-->
-            <!--</div>-->
-        <!--</div>-->
-    <!--</div>-->
-    <!--<div class="panel panel-default list-group-item">-->
-        <!--<div class="panel-heading" role="tab" id="headingSeven">-->
-            <!--<h4 class="panel-title">-->
-                <!--<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseSeven">-->
-                    <!--风暴英雄-->
-                <!--</a>-->
-            <!--</h4>-->
-        <!--</div>-->
-        <!--<div id="collapseSeven" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">-->
-            <!--<div class=" list-group">-->
-                <!--<a href="#" class="list-group-item active">-->
-                    <!--回锅肉-->
-                <!--</a>-->
-                <!--<a href="#" class="list-group-item">烧烤</a>-->
-                <!--<a href="#" class="list-group-item">鱼香肉丝</a>-->
-                <!--<a href="#" class="list-group-item">麻婆豆腐</a>-->
-                <!--<a href="#" class="list-group-item">夫妻肺片</a>-->
-            <!--</div>-->
-        <!--</div>-->
-    <!--</div>-->
-    <!--<div class="panel panel-default list-group-item">-->
-        <!--<div class="panel-heading" role="tab" id="headingEight">-->
-            <!--<h4 class="panel-title">-->
-                <!--<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseEight">-->
-                    <!--风暴英雄-->
-                <!--</a>-->
-            <!--</h4>-->
-        <!--</div>-->
-        <!--<div id="collapseEight" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">-->
-            <!--<div class=" list-group">-->
-                <!--<a href="#" class="list-group-item active">-->
-                    <!--回锅肉-->
-                <!--</a>-->
-                <!--<a href="#" class="list-group-item">烧烤</a>-->
-                <!--<a href="#" class="list-group-item">鱼香肉丝</a>-->
-                <!--<a href="#" class="list-group-item">麻婆豆腐</a>-->
-                <!--<a href="#" class="list-group-item">夫妻肺片</a>-->
-            <!--</div>-->
-        <!--</div>-->
-    <!--</div>-->
 </div>
 
 
 
 
 
+<!--<div  >-->
+    <!--<div>-->
+        <!--<span style="width:100px" ui-sref=".Page1"><a href="">Page-1</a></span>-->
+        <!--<span style="width:100px" ui-sref=".Page2"><a href="">Page-2</a></span>-->
+        <!--<span style="width:100px" ui-sref=".Page3"><a href="">Page-3</a></span>-->
+        <!--<span style="width:100px" ui-sref=".Page4"><a href="">Page-4</a></span>-->
+    <!--</div>-->
 
+    <div class="ml " >
+        <div class="bb bg-color-white of-visible header">
+        <div class="color-grey pull-right pr30 header-center">
+            <img src="images/icon-position.png">
+            <div class="btn-group pr50">
+                <button type="button" class="btn btn-default dropdown-toggle btn1 color-grey "  data-toggle="dropdown">
+                    北京葡萄藤哇哈哈水站
+                    <span class="caret"></span>
+                </button>
 
+                <ul class="dropdown-menu color-grey" role="menu">
+                    <li>
+                        <a href="">武汉葡萄藤哇哈哈水站</a>
+                    </li>
+                    <li role="presentation">
+                        <a href="">郑州葡萄藤哇哈哈水站</a>
+                    </li>
+                    <li role="presentation">
+                        <a href="">成都葡萄藤哇哈哈水站</a>
+                    </li>
+                </ul>
+            </div>
+            <img class="pr15" src="images/person.png">
+            <span  class="pr30">ID零零七（超级管理员）</span>
+            <img class="pr30" src="images/icon-message.png">
+            <img src="images/icon-switch.png">
+        </div>
+        </div>
 
-
-
-
-
-
-<div>
-    <div>
-        <span style="width:100px" ui-sref=".Page1"><a href="">Page-1</a></span>
-        <span style="width:100px" ui-sref=".Page2"><a href="">Page-2</a></span>
-        <span style="width:100px" ui-sref=".Page3"><a href="">Page-3</a></span>
-        <span style="width:100px" ui-sref=".Page4"><a href="">Page-4</a></span>
+        <div  class="bg-color-grey of-auto" ui-view=""/>
     </div>
 
+<!--</div>-->
+<!--</body>-->
 
-
-
-
-
-
-    <div>
-        <div ui-view=""/>
-    </div>
-</div>
+<!--</html>-->
