--- a/js-task6/Page2.html
+++ b/js-task6/Page2.html
@@ -1,64 +1,51 @@
-
-
-
-
-
-
-
-
-
-<link rel="stylesheet" href="css/page2.css">
-
-<!--<script src="js/angular.js"></script>-->
-
-<!--<script src="js/form.js"></script>-->
-
-
-<div class="main2 bg-color-white bba color-grey4 of-auto" >
+<div class="main2 bg-color-white bba color-grey4 of-auto" ng-controller="myCtrl1">
     <div class="bg-color-lightgrey bb">
         <span class="head">本日订单</span>
     </div>
     <div class="ma18">
         <div class="mb18 bg-color-grey3 of-auto bba2 pt30">
             <div class="ml33 mb18 pull-left">
-                <span class="mr18">客户姓名</span>
-                <input type="text">
+                <span class="mr18">技能</span>
+                <input type="text" ng-model="search.skillName">
             </div>
             <div class="ml33 mb18 pull-left">
-                <span class="mr18">客户姓名</span>
-                <input type="text">
+                <span class="mr18">文档名</span>
+                <input type="text" ng-model="search.name">
             </div>
             <div class="ml33 mb18 pull-left">
-                <span class="mr18">客户姓名</span>
-                <input type="text">
+                <span class="mr18">上传者</span>
+                <input type="text" ng-model="search.authorName">
+                <!--ng-model="search.authorName"-->
             </div>
-            <div class="ml33 mb18 pull-left">
-                <span class="mr18">客户姓名</span>
-                <input type="text">
-            </div>
-            <div class="ml33 mb18 pull-left">
-                <span class="mr18">客户姓名</span>
-                <input type="text">
-            </div>
+            <!--<div class="ml33 mb18 pull-left">-->
+            <!--<span class="mr18">客户姓名</span>-->
+            <!--<input type="text">-->
+            <!--</div>-->
+            <!--<div class="ml33 mb18 pull-left">-->
+            <!--<span class="mr18">客户姓名</span>-->
+            <!--<input type="text">-->
+            <!--</div>-->
 
-            <div class="ml33 mb18 pull-left">
-                <span class="mr18">客户姓名</span>
-                <input type="text">
-            </div>
-            <!--<br>-->
+            <!--<div class="ml33 mb18 pull-left">-->
+            <!--<span class="mr18">客户姓名</span>-->
+            <!--<input type="text">-->
+            <!--</div>-->
+
             <button type="button" class="btn btn-info pull-right btn4 mb30 mr33 ml200">
-                <span class="glyphicon glyphicon-search"></span>搜索</button>
+                <span class="glyphicon glyphicon-search"></span>搜索
+            </button>
         </div>
-        <div  ng-controller="myCtrl1">
+        <div>
             <table class="table table-striped table-bordered table-hover table-condensed ">
                 <thead>
-                <th>id</th>
-                <th>name</th>
-                <th>qq</th>
-                <th>type</th>
-                <th>school</th>
-                <th>talent</th>
-                <th>level</th>
+                <th>序号</th>
+                <th>技能</th>
+                <th>文档名</th>
+                <th>上传者</th>
+                <th>链接</th>
+                <th>点赞数</th>
+                <!--<th>talent</th>-->
+                <!--<th>level</th>-->
                 <th>操作</th>
                 <!--<th>joinTime</th>-->
                 <!--<th>wish</th>-->
@@ -67,15 +54,16 @@
                 </thead>
 
                 <tbody>
-                <tr ng-repeat="x in names">
-
-                    <td> {{x.id}}</td>
+                <tr ng-repeat="x in filteredList | limitTo : maxPerPage : (currentPage - 1) * maxPerPage">
+                    <!--获取数组下标生成序号-->
+                    <td>{{$index + 1}}</td>
+                    <td> {{x.skillName}}</td>
                     <td> {{x.name}}</td>
-                    <td> {{x.qq}}</td>
-                    <td> {{x.type}}</td>
-                    <td> {{x.school}}</td>
-                    <td> {{x.talent}}</td>
-                    <td> {{x.level}}</td>
+                    <td> {{x.authorName}}</td>
+                    <td><a href="{{x.url}}">链接</a></td>
+                    <td> {{x.like}}</td>
+                    <!--<td> {{x.talent}}</td>-->
+                    <!--<td> {{x.level}}</td>-->
                     <td>
                         <button type="button" class="btn btn-success">查看</button>
                         <button type="button" class="btn btn-warning">关闭</button>
@@ -92,39 +80,21 @@
         </div>
     </div>
     <nav class="pull-right mr18">
-        <ul class="pagination">
-            <li>
-                <a href="#" aria-label="Previous">
-                    <span aria-hidden="true">&laquo;</span>
-                </a>
-            </li>
-            <li><a href="">1</a></li>
-            <li><a href="">2</a></li>
-            <li><a href="">3</a></li>
-            <li><a href="">4</a></li>
-            <li><a href="">5</a></li>
-            <li>
-                <a href="#" aria-label="Next">
-                    <span aria-hidden="true">&raquo;</span>
-                </a>
-            </li>
-        </ul>
+        <ul class="pagination-sm" uib-pagination total-items="filteredList.length" ng-model="currentPage"
+            max-size="maxSize" items-per-page="maxPerPage" boundary-links="true" force-ellipses="true"
+            previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;"></ul>
+        <!--<ul class="pagination"  ng-repeat="x in pageArr">-->
+
+        <!--<li><a href="">{{x}}</a></li>-->
+        <!--&lt;!&ndash;<li><a href="">2</a></li>&ndash;&gt;-->
+        <!--&lt;!&ndash;<li><a href="">3</a></li>&ndash;&gt;-->
+        <!--&lt;!&ndash;<li><a href="">4</a></li>&ndash;&gt;-->
+        <!--&lt;!&ndash;<li><a href="">5</a></li>&ndash;&gt;-->
+        <!--</ul>-->
+
     </nav>
 </div>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-<!--<script src="js/form.js"></script>-->
 
 
