--- a/js-task6/main.html
+++ b/js-task6/main.html
@@ -7,27 +7,17 @@
     <script src="js/jquery-2.0.js"></script>
     <link href="css/bootstrap.css" rel="stylesheet">
     <script src="js/bootstrap.js"></script>
-    <!--<script src="js/jquery-3.1.1.js"></script>-->
-    <!--<script src="https://cdn.static.runoob.com/libs/angular.js/1.4.6/angular.min.js"></script>-->
-    <script src="js/angular.js"></script>
+    <script src="js/angular-1.5.8.js"></script>
     <script src="js/angular-ui-router.js"></script>
-
-
-    <link rel="stylesheet" href="css/js-task5.css">
+    <script src="js/angular-ui-bootstrap.js"></script>
+    <script src="js/ocLazyLoad.js"></script>
     <script src="js/app.js"></script>
-
-
-    <!--<script src="js/page-tab.js"></script>-->
+    <!--<script src="../../../../../ui-bootstrap/分页demo/page/js/index.js"></script>-->
 </head>
 <body data-ng-app="myApp">
 
-<div style="min-width: 1271px" data-ui-view=""></div>
-
-
-
+<div style="min-width: 1270px" data-ui-view=""></div>
 
 </body>
-
-
 <html>
 
