--- a/js-task6/one-login.html
+++ b/js-task6/one-login.html
@@ -1,7 +1,15 @@
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="stylesheet" href="css/js-task5.css">
+    <title>后台登录</title>
+</head>
+<body>
 
+<div class="background">
 
-
-<img class="background" src="images/background.jpg">
 <div class=" main">
     <div class="nav">
         <button id="login">登录</button>
@@ -50,6 +58,8 @@
         </form>
     </div>
 </div>
-
+</div>
+</body>
 
 <script src="js/js-task5.js" type="text/javascript" ></script>
+</html>
