--- a/js-task6/page-tab.html
+++ b/js-task6/page-tab.html
@@ -1,63 +1,35 @@
-<!--<!DOCTYPE html>-->
-<!--<html lang="en">-->
-<!--<head>-->
-    <!--<meta charset="UTF-8">-->
-    <!--<meta name="viewport" content="width=device-width,initial-scale=1">-->
-
-    <!--<style>-->
-        <!--.panel-line {-->
-            <!--transition: all linear 0.5s;-->
-        <!--}-->
-
-        <!--.ng-hide {-->
-            <!--height: 0;-->
-            <!--width: 0;-->
-            <!--background-color: transparent;-->
-        <!--}-->
-
-    <!--</style>-->
-
-
-    <!--<script src="http://how2j.cn/study/js/jquery/2.0.0/jquery.min.js"></script>-->
-    <!--<link href="http://how2j.cn/study/css/bootstrap/3.3.6/bootstrap.min.css" rel="stylesheet">-->
-    <!--<script src="http://how2j.cn/study/js/bootstrap/3.3.6/bootstrap.min.js"></script>-->
-
-<link href="css/page-tab.css" rel="stylesheet">
-
-<!--</head>-->
-
-<!--<body>-->
-
+<!--左侧导航栏开始-->
 <div class="panel-group  list-group nav-left " id="accordion" role="tablist" aria-multiselectable="true">
-
-<img class="nav-icon" src="images/logo.png" >
-
+    <img class="nav-icon" src="images/logo.png">
+    <!--第一段折叠-->
     <div class=" panel panel-default ">
-
-        <div ng-app="showApp" class="panel-heading" role="tab" id="headingOne">
-            <span  class="panel-line"></span>
+        <div class="panel-heading" role="tab" id="headingOne">
+            <span class="panel-line"></span>
             <h4 class="panel-title">
-                <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                    <img class="nav-icon2" src="images/icon1.png" style="padding: 0 3px">欢迎页<img class="nav-icon3" src="images/arrows.png" >
+                <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne"
+                   aria-expanded="true" aria-controls="collapseOne">
+                    <img class="nav-icon2" src="images/icon1.png" style="padding: 0 3px">欢迎页<img class="nav-icon3"
+                                                                                                 src="images/arrows.png">
                 </a>
             </h4>
         </div>
         <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
             <div class=" list-group">
-                    <a href="" class="list-group-item " ui-sref=".Page1"><span class="nav-p">欢迎页</span></a>
-                    <a href="" class="list-group-item" ui-sref=".Page2"><span class="nav-p">订单动态</span></a>
-                    <a href="" class="list-group-item" ui-sref=".Page3"><span class="nav-p">今日报表</span></a>
-                    <a href="" class="list-group-item" ui-sref=".Page4"><span class="nav-p">表单汇总</span></a>
+                <a href="" class="list-group-item " ui-sref=".Page1"><span class="nav-p">欢迎页</span></a>
+                <a href="" class="list-group-item" ui-sref=".Page2"><span class="nav-p">订单动态</span></a>
+                <a href="" class="list-group-item" ui-sref=".Page3"><span class="nav-p">今日报表</span></a>
+                <a href="" class="list-group-item" ui-sref=".Page4"><span class="nav-p">表单汇总</span></a>
             </div>
         </div>
     </div>
-
+    <!--第二段折叠-->
     <div class=" panel panel-default ">
         <div class="  panel-heading" role="tab" id="headingTwo">
             <span class="panel-line"></span>
             <h4 class="panel-title">
-                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                    <img class="nav-icon2" src="images/icon2.png">水站管理<img class="nav-icon3" src="images/arrows.png" >
+                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo"
+                   aria-expanded="false" aria-controls="collapseTwo">
+                    <img class="nav-icon2" src="images/icon2.png">水站管理<img class="nav-icon3" src="images/arrows.png">
                 </a>
             </h4>
         </div>
@@ -80,57 +52,45 @@
             </div>
         </div>
     </div>
-
+    <!--第三段折叠-->
     <div class=" panel panel-default ">
         <div class="  panel-heading" role="tab" id="headingThree">
             <span class="panel-line"></span>
             <h4 class="panel-title">
-                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                    <img class="nav-icon2" src="images/icon3.png">客户管理<img class="nav-icon3" src="images/arrows.png" >
+                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree"
+                   aria-expanded="false" aria-controls="collapseThree">
+                    <img class="nav-icon2" src="images/icon3.png">客户管理<img class="nav-icon3" src="images/arrows.png">
                 </a>
             </h4>
         </div>
         <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
             <div class=" list-group">
                 <div>
-                <a href="#" class="list-group-item ">
-                    <span class="nav-p">回锅肉</span>
-                </a>
+                    <a href="#" class="list-group-item ">
+                        <span class="nav-p">回锅肉</span>
+                    </a>
                 </div>
 
                 <div>
-                <a href="#" class="list-group-item"><span class="nav-p">烧烤</span></a>
+                    <a href="#" class="list-group-item"><span class="nav-p">烧烤</span></a>
                 </div>
                 <div>
-                <a href="#" class="list-group-item"><span class="nav-p">鱼香肉丝</span></a>
+                    <a href="#" class="list-group-item"><span class="nav-p">鱼香肉丝</span></a>
                 </div>
                 <a href="#" class="list-group-item"><span class="nav-p">麻婆豆腐</span></a>
                 <a href="#" class="list-group-item"><span class="nav-p">夫妻肺片</span></a>
             </div>
         </div>
     </div>
-
-
 </div>
 
-
-
-
-
-<!--<div  >-->
-    <!--<div>-->
-        <!--<span style="width:100px" ui-sref=".Page1"><a href="">Page-1</a></span>-->
-        <!--<span style="width:100px" ui-sref=".Page2"><a href="">Page-2</a></span>-->
-        <!--<span style="width:100px" ui-sref=".Page3"><a href="">Page-3</a></span>-->
-        <!--<span style="width:100px" ui-sref=".Page4"><a href="">Page-4</a></span>-->
-    <!--</div>-->
-
-    <div class="ml " >
-        <div class="bb bg-color-white of-visible header">
+<div class="ml">
+    <!--个人中心导航条-->
+    <div class="bb bg-color-white of-visible header nav-top">
         <div class="color-grey pull-right pr30 header-center">
             <img src="images/icon-position.png">
             <div class="btn-group pr50">
-                <button type="button" class="btn btn-default dropdown-toggle btn1 color-grey "  data-toggle="dropdown">
+                <button type="button" class="btn btn-default dropdown-toggle btn1 color-grey " data-toggle="dropdown">
                     北京葡萄藤哇哈哈水站
                     <span class="caret"></span>
                 </button>
@@ -148,14 +108,14 @@
                 </ul>
             </div>
             <img class="pr15" src="images/person.png">
-            <span  class="pr30">ID零零七（超级管理员）</span>
+            <span class="pr30">ID零零七（超级管理员）</span>
             <img class="pr30" src="images/icon-message.png">
             <img src="images/icon-switch.png">
         </div>
-        </div>
-
-        <div  class="bg-color-grey of-auto" ui-view=""/>
     </div>
+    <!--ui路由页面开始-->
+    <div class="bg-color-grey of-auto mt60" ui-view=""/>
+</div>
 
 <!--</div>-->
 <!--</body>-->
